--- a/backend/composer.json
+++ b/backend/composer.json
@@ -8,6 +8,7 @@
         "php": "^8.1",
         "dedoc/scramble": "^0.9.0",
         "doctrine/dbal": "^3.8",
+        "encore/laravel-admin": "^1.8",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
