--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,8 @@ services:
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
       - .:/var/www/html
-    depends_on:
-      - php
-    links:
-      - php
+    networks:
+      - my_network
 
   php:
     build:
@@ -20,6 +18,8 @@ services:
     working_dir: /var/www/html/backend
     volumes:
       - .:/var/www/html
+    networks:
+      - my_network
 
   mysql:
     image: mysql:latest
@@ -32,6 +32,8 @@ services:
       - "${COMPOSE_MYSQL_PORT}:3306"
     volumes:
       - ./mysql/data:/var/lib/mysql
+    networks:
+      - my_network
 
   redis:
     image: redis:alpine
@@ -42,10 +44,23 @@ services:
     ports:
       - "${COMPOSE_REDIS_PORT}:6379"
 
-#  python:
-#    build:
-#      context: ./python
-#      dockerfile: Dockerfile
-#    command: "python /python/bot/bot.py"
-#    volumes:
-#      - ./python/bot:/python/bot
+  python:
+    build:
+      context: ./python
+      dockerfile: Dockerfile
+    command: "python /python/bot/bot.py"
+    volumes:
+      - ./python/bot:/python/bot
+    networks:
+      - my_network
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "${COMPOSE_FRONTEND_PORT}:80"
+
+networks:
+  my_network:
+    driver: bridge
